[package]
name = "markdown-heading-id"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Filter for `pulldown-cmark` which converts headings with custom ID"
repository = "https://github.com/ShotaroTsuji/markdown-heading-id"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "pulldown-cmark", "heading id"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
